// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<Fragment>
  This is the admin page!
</Fragment>
`;

exports[`renders without crashing 2`] = `
<Fragment>
  These people are approved:
</Fragment>
`;

exports[`renders without crashing 3`] = `
<Fragment>
  These are incoming user requests:
</Fragment>
`;
